module(
    name = "serviceradar",
    version = "0.0.0",
    repo_name = "serviceradar",
)

# --- Bazel dependencies  ----------------------------------
bazel_dep(name = "rules_go", version = "0.59.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.45.0", repo_name = "bazel_gazelle")
bazel_dep(name = "rules_rust", version = "0.65.0")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_nodejs", version = "6.5.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "33.4", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "rules_erlang", version = "3.16.0")
bazel_dep(name = "rules_elixir", version = "1.1.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_features", version = "1.33.0", repo_name = "bazel_features")
bazel_dep(name = "rules_java", version = "9.0.3", repo_name = "rules_java")
bazel_dep(name = "rules_multirun", version = "0.13.0")
bazel_dep(name = "swiftlint", version = "0.63.2", repo_name = "SwiftLint")

# NOTE: rules_multirun uses Python, which causes issues with `bazel run` when
# using remote execution from a different host platform (e.g., macOS -> Linux RBE).
# See: https://github.com/keith/rules_multirun/issues/43
# A Go port exists (PR #57) but isn't ready for use yet.
# Workaround: Push images from CI (Linux) or use scripts/push_all_images.sh
bazel_dep(name = "rules_license", version = "1.0.0", repo_name = "rules_license")
bazel_dep(name = "rules_shell", version = "0.6.1", repo_name = "rules_shell")
bazel_dep(name = "bazel_skylib", version = "1.9.0", repo_name = "bazel_skylib")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "aspect_rules_js", version = "2.6.0")
bazel_dep(name = "aspect_rules_ts", version = "3.7.0")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "toolchains_llvm", version = "1.5.0")
bazel_dep(name = "buildifier_prebuilt", version = "6.4.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(
    name = "toolchains_buildbuddy",
    version = "0.0.4",
    repo_name = "io_buildbuddy_buildbuddy_toolchain",
)

single_version_override(
    module_name = "rules_java",
    patch_strip = 0,
    patches = ["//third_party/patches/rules_java:openbsd_jni_header.patch"],
)

single_version_override(
    module_name = "rules_erlang",
    patch_strip = 1,
    patches = [
        "//third_party/patches/rules_erlang:skip_system_erlang.patch",
        "//third_party/patches/rules_erlang:add_bzlmod_build.patch",
    ],
)

single_version_override(
    module_name = "rules_elixir",
    patch_strip = 1,
    patches = [
        "//third_party/patches/rules_elixir:skip_system_elixir.patch",
    ],
)

host_platform_ext = use_extension("@platforms//host:extension.bzl", "host_platform")
use_repo(host_platform_ext, "host_platform")

# --- Version Extension (reads VERSION file at load time) ----------------------------------
version_ext = use_extension("//build:version.bzl", "version_ext")
use_repo(version_ext, "serviceradar_version")

# --- Erlang/Elixir toolchains (hermetic for web-ng builds) -------------------
erlang_config_ext = use_extension("@rules_erlang//bzlmod:extensions.bzl", "erlang_config")
erlang_config_ext.internal_erlang_from_github_release(
    name = "otp_28_1",
    sha256 = "c7c6fe06a3bf0031187d4cb10d30e11de119b38bdba7cd277898f75d53bdb218",
    version = "28.1",
)
use_repo(erlang_config_ext, "erlang_config")

elixir_config_ext = use_extension("@rules_elixir//bzlmod:extensions.bzl", "elixir_config")
elixir_config_ext.internal_elixir_from_github_release(
    name = "elixir_1_19_4",
    sha256 = "a2df9d5411fc53d97ec17c069765c8fb781f8dc36c4e06ec1cd4b189340d364b",
    version = "1.19.4",
)
use_repo(elixir_config_ext, "elixir_config")

register_toolchains(
    "@erlang_config//otp_28_1:toolchain_major",
    "@erlang_config//otp_28_1:toolchain_major_minor",
    "@elixir_config//elixir_1_19_4:toolchain",
)

# Force toolchain resolution to use the hermetic Erlang toolchains (avoid the
# upstream rules_erlang \"external\" toolchains that rely on host OTP).
toolchain_resolution_overrides = {
    "@rules_erlang//tools:toolchain_type": [
        "@erlang_config//otp_28_1:toolchain_major",
        "@erlang_config//otp_28_1:toolchain_major_minor",
    ],
}

# --- Java Toolchain  ----------------------------------

java = use_extension("@rules_java//java:extensions.bzl", "toolchains")
use_repo(
    java,
    "local_jdk",
    "remote_java_tools",
    "remote_java_tools_darwin_arm64",
    "remote_java_tools_darwin_x86_64",
    "remote_java_tools_linux",
    "remote_java_tools_windows",
    "remotejdk11_linux",
    "remotejdk11_macos",
    "remotejdk11_macos_aarch64",
)

register_toolchains(
    "@remote_java_tools//:all",
    "@remote_java_tools_linux//:all",
    "@remote_java_tools_darwin_x86_64//:all",
    "@remote_java_tools_darwin_arm64//:all",
    "@remote_java_tools_windows//:all",
    "@local_jdk//:all",
    "@remotejdk11_linux//:all",
    "@remotejdk11_macos//:all",
    "@remotejdk11_macos_aarch64//:all",
)

# --- Python toolchain (hermetic for all platforms) -------------------
# Configure hermetic Python toolchains for consistent behavior across
# local builds and remote cache. This prevents architecture mismatches
# when rules_multirun pulls cached artifacts.
#
# IMPORTANT: Register host toolchains FIRST so they take precedence for
# host-transitioned targets like rules_multirun (which use cfg="host").
# See: https://github.com/bazelbuild/bazel/issues/5309
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.11",
)
use_repo(python, "python_3_11", "python_versions")

register_toolchains(
    # Host toolchains first - ensures local Python is used for `bazel run`
    # targets that use cfg="host" transitions (like rules_multirun)
    "//build/python_toolchain:py3_toolchain",  # macOS ARM64
    "//build/python_toolchain:py3_toolchain_x86_64",  # macOS x86_64
    # Hermetic toolchains for cross-platform builds and remote execution
    "@python_versions//3.11:all",
)

# --- RPM & package Toolchain  ----------------------------------

# Prefer a fixed Linux rpmbuild so remote/RBE builds stay hermetic. We skip the
# host autodetect toolchain (would point at Homebrew on macOS).
register_toolchains("//build/rpm_toolchain:rpmbuild_linux_toolchain")

# --- CC Toolchain  ----------------------------------

cc_configure_ext = use_extension("@rules_cc//cc:extensions.bzl", "cc_configure_extension")
use_repo(cc_configure_ext, "local_config_cc", "local_config_cc_toolchains")

cc_compat_ext = use_extension("@rules_cc//cc:extensions.bzl", "compatibility_proxy")
use_repo(cc_compat_ext, "cc_compatibility_proxy")

# --- BuildBuddy Toolchain  ----------------------------------

buildbuddy_toolchain_ext = use_extension(
    "@io_buildbuddy_buildbuddy_toolchain//:extensions.bzl",
    "buildbuddy",
)

# Align BuildBuddy's generated GCC toolchain with the Oracle Linux based
# executor image so Bazel treats the system headers as hermetic.
buildbuddy_toolchain_ext.gcc_toolchain(
    extra_cxx_builtin_include_directories = [
        "/opt/rh/gcc-toolset-13/root/usr/include/c++/13",
        "/opt/rh/gcc-toolset-13/root/usr/include/c++/13/x86_64-redhat-linux",
        "/opt/rh/gcc-toolset-13/root/usr/include/c++/13/backward",
        "/opt/rh/gcc-toolset-13/root/usr/lib/gcc/x86_64-redhat-linux/13/include",
        "/opt/rh/gcc-toolset-13/root/usr/lib/gcc/x86_64-redhat-linux/13/include-fixed",
        # Debian bullseye toolchain paths (GCC 10) used in the RBE image.
        "/usr/lib/gcc/x86_64-linux-gnu/10/include",
        "/usr/lib/gcc/x86_64-linux-gnu/10/include-fixed",
        # Allow Debian/Ubuntu GCC 11 built-ins when remote execution falls back to distro toolchain.
        "/usr/lib/gcc/x86_64-linux-gnu/11/include",
        "/usr/lib/gcc/x86_64-linux-gnu/11/include-fixed",
        # Debian/Ubuntu GCC 5 built-ins used by older remote workers.
        "/usr/lib/gcc/x86_64-linux-gnu/5/include",
        "/usr/lib/gcc/x86_64-linux-gnu/5/include-fixed",
    ],
    gcc_major_version = "13",
)

# Make the generated platform default to our custom executor image.
buildbuddy_toolchain_ext.platform(
    container_image = "docker://ghcr.io/carverauto/serviceradar/rbe-executor:v1.0.20",
)
use_repo(buildbuddy_toolchain_ext, "buildbuddy_toolchain")

# --- LLVM Toolchain (clang/lld) ----------------------------------
llvm_ext = use_extension(
    "@toolchains_llvm//toolchain/extensions:llvm.bzl",
    "llvm",
)
llvm_ext.toolchain(
    name = "llvm_toolchain",
    llvm_versions = {
        "darwin-aarch64": "17.0.4",
        "darwin-x86_64": "15.0.7",
        "ubuntu-22.04-x86_64": "17.0.4",
    },
)
use_repo(llvm_ext, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")

# --- RBE Toolchain and platforms  ----------------------------------
register_execution_platforms(
    "//build/platforms:linux_amd64",
    "//build/platforms:linux_arm64",
    "//build/platforms:darwin_amd64",
    "//build/platforms:darwin_arm64",
)

# --- OCI Toolchain  ----------------------------------

oci_ext = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci_ext.pull(
    name = "ubuntu_jammy",
    digest = "sha256:a1af69f6c9bc3657289d23abff8ee360d2417d6cf69719e287822443dca3dc57",
    image = "ubuntu:22.04",
    platforms = [
        "linux/amd64",
    ],
)
oci_ext.pull(
    name = "actions_runner",
    digest = "sha256:25e5339f41c8511899dff6d9d1ee3d29d0aaca085f24b967f486e153e4368cc6",
    image = "ghcr.io/actions/actions-runner",
    platforms = [
        "linux/amd64",
    ],
)
oci_ext.pull(
    name = "arc_runner",
    digest = "sha256:4d98cb36fc9a2dd82636e790d2be8c0d14de76584e90c91b7325fb811b8ef9fc",
    image = "ghcr.io/carverauto/arc-runner",
    platforms = [
        "linux/amd64",
    ],
)
oci_ext.pull(
    name = "alpine_3_20",
    digest = "sha256:f25ebd2af60b9de8e26e5100fe6f493beb81bff010f27e84f223ad19886a78f0",
    image = "alpine:3.20",
    platforms = [
        "linux/amd64",
    ],
)
oci_ext.pull(
    name = "ubuntu_noble",
    digest = "sha256:985be7c735afdf6f18aaa122c23f87d989c30bba4e9aa24c8278912aac339a8d",
    image = "ubuntu:24.04",
    platforms = [
        "linux/amd64",
    ],
)
oci_ext.pull(
    name = "debian_bookworm_slim",
    digest = "sha256:48fa1e32d5ad897f7748b4b67d1ffb9e2ec46f4129f037afa3456a99f937203a",
    image = "debian:bookworm-slim",
    platforms = [
        "linux/amd64",
    ],
)
oci_ext.pull(
    name = "debian_testing_slim",
    digest = "sha256:80381085775a6e69f0f8d09dd9a39495063e348382eb8d4881ba6f142d24b8ab",
    image = "debian:testing-slim",
    platforms = [
        "linux/amd64",
    ],
)
oci_ext.pull(
    name = "node_20_alpine",
    digest = "sha256:6a91081a440be0b57336fbc4ee87f3dab1a2fd6f80cdb355dcf960e13bda3b59",
    image = "node:20-alpine",
    platforms = [
        "linux/amd64",
    ],
)
oci_ext.pull(
    name = "nginx_alpine",
    digest = "sha256:60e48a050b6408d0c5dd59b98b6e36bf0937a0bbe99304e3e9c0e63b7563443a",
    image = "nginx:alpine",
    platforms = [
        "linux/amd64",
    ],
)
oci_ext.pull(
    name = "serviceradar_cert_generator",
    digest = "sha256:882587dffa59b709fc11c3ed5d304ef8af1c281c943cca19fda7af263e9707ea",
    image = "ghcr.io/carverauto/serviceradar-cert-generator",
    platforms = [
        "linux/amd64",
    ],
)
oci_ext.pull(
    name = "serviceradar_tools",
    digest = "sha256:c9b4e23ec638e3b2582477d11ca977b76c3c4297b42a64177628067f15a6fb82",
    image = "ghcr.io/carverauto/serviceradar-tools",
    platforms = [
        "linux/amd64",
    ],
)
oci_ext.pull(
    name = "cloudnativepg_postgresql_16_6",
    image = "ghcr.io/cloudnative-pg/postgresql",
    platforms = [
        "linux/amd64",
    ],
    reproducible = False,
    tag = "16.6-bookworm",
)
oci_ext.pull(
    name = "serviceradar_cnpg_16_6_0_sr3",
    digest = "sha256:882fdd3f4905342a6ffa347ee988840eafa4f8e8b234a26e6e8cb72ec71b8eb8",
    image = "ghcr.io/carverauto/serviceradar-cnpg",
    platforms = [
        "linux/amd64",
    ],
)
use_repo(
    oci_ext,
    "actions_runner",
    "actions_runner_linux_amd64",
    "alpine_3_20",
    "alpine_3_20_linux_amd64",
    "arc_runner",
    "arc_runner_linux_amd64",
    "cloudnativepg_postgresql_16_6",
    "cloudnativepg_postgresql_16_6_linux_amd64",
    "debian_bookworm_slim",
    "debian_bookworm_slim_linux_amd64",
    "debian_testing_slim",
    "debian_testing_slim_linux_amd64",
    "nginx_alpine",
    "nginx_alpine_linux_amd64",
    "node_20_alpine",
    "node_20_alpine_linux_amd64",
    "serviceradar_cert_generator",
    "serviceradar_cert_generator_linux_amd64",
    "serviceradar_cnpg_16_6_0_sr3",
    "serviceradar_cnpg_16_6_0_sr3_linux_amd64",
    "serviceradar_tools",
    "serviceradar_tools_linux_amd64",
    "ubuntu_jammy",
    "ubuntu_jammy_linux_amd64",
    "ubuntu_noble",
    "ubuntu_noble_linux_amd64",
)

repo_alias = use_repo_rule("//build:repo_alias.bzl", "repo_alias")

repo_alias(
    name = "oci_regctl_linux_amd64",
    actual = "@rules_oci++oci+oci_regctl_linux_amd64",
)

repo_alias(
    name = "oci_regctl_toolchains",
    actual = "@rules_oci++oci+oci_regctl_toolchains",
)

# --- Xcode Toolchain  ----------------------------------

xcode_configure_ext = use_extension(
    "@bazel_tools//tools/osx:xcode_configure.bzl",
    "xcode_configure_extension",
)
use_repo(xcode_configure_ext, "local_config_xcode")

# --- Go toolchain & dependency management ----------------------------------

go_sdk = use_extension(
    "@io_bazel_rules_go//go:extensions.bzl",
    "go_sdk",
)
go_sdk.from_file(
    name = "go_sdk",
    go_mod = "//:go.mod",
)
use_repo(go_sdk, "go_sdk")

go_deps = use_extension(
    "@bazel_gazelle//:extensions.bzl",
    "go_deps",
)
go_deps.module_override(
    patch_strip = 1,
    patches = ["//third_party/patches:go-spiffe-go-proto.patch"],
    path = "github.com/spiffe/go-spiffe/v2",
)
go_deps.gazelle_override(
    build_file_generation = "on",
    directives = [
        "gazelle:proto disable",
    ],
    path = "google.golang.org/protobuf",
)
go_deps.gazelle_override(
    build_file_generation = "on",
    path = "github.com/pmezard/go-difflib",
)
go_deps.gazelle_override(
    build_file_generation = "on",
    path = "github.com/nats-io/nats.go",
)
go_deps.gazelle_override(
    build_file_generation = "on",
    directives = [
        "gazelle:proto disable",
    ],
    path = "github.com/spiffe/spire-api-sdk",
)
go_deps.from_file(go_mod = "//:go.mod")

# NOTE: `bazel mod tidy` populates the list of repositories below based on the
# contents of go.mod. Keep the list sorted for readability.
use_repo(
    go_deps,
    "com_github_atotto_clipboard",
    "com_github_charmbracelet_bubbles",
    "com_github_charmbracelet_bubbletea",
    "com_github_charmbracelet_lipgloss",
    "com_github_google_uuid",
    "com_github_gorilla_websocket",
    "com_github_gosnmp_gosnmp",
    "com_github_jackc_pgx_v5",
    "com_github_nats_io_jwt_v2",
    "com_github_nats_io_nats_go",
    "com_github_nats_io_nats_server_v2",
    "com_github_nats_io_nkeys",
    "com_github_rs_zerolog",
    "com_github_shirou_gopsutil_v3",
    "com_github_spiffe_go_spiffe_v2",
    "com_github_spiffe_spire_api_sdk",
    "com_github_stretchr_testify",
    "com_github_swaggo_swag",
    "com_github_tetratelabs_wazero",
    "io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_exporters_otlp_otlplog_otlploggrpc",
    "io_opentelemetry_go_otel_exporters_otlp_otlpmetric_otlpmetricgrpc",
    "io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc",
    "io_opentelemetry_go_otel_log",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_sdk_log",
    "io_opentelemetry_go_otel_sdk_metric",
    "io_opentelemetry_go_otel_trace",
    "io_opentelemetry_go_proto_otlp",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_crypto",
    "org_golang_x_net",
    "org_golang_x_sys",
    "org_uber_go_mock",
)

# --- Rust toolchain bootstrap -----------------------------------------------
RUST_DEFAULT_VERSION = "1.93.0"

RUST_EDITION = "2021"

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = RUST_EDITION,
    versions = [RUST_DEFAULT_VERSION],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# TODO(bazel-migration): add rust_host_tools for pinned host binaries and expand
# crate_universe coverage as additional Rust targets migrate.

# --- Rust crate dependencies (crate_universe) --------------------------------

crates = use_extension(
    "@rules_rust//crate_universe:extensions.bzl",
    "crate",
)
crates.annotation(
    additive_build_file_content = """
load("@bazel_skylib//rules:write_file.bzl", "write_file")

write_file(
    name = "workspace_perl_tool",
    out = "perl-wrapper.sh",
    content = [
        "#!/usr/bin/env bash",
        "set -euo pipefail",
        'exec perl "$@"',
    ],
    is_executable = True,
)
""",
    build_script_data = [
        ":workspace_perl_tool",
        "@rust_crates__openssl-src-300.5.5-3.5.5//:openssl_src_runfiles",
        "@rust_crates__openssl-src-300.5.5-3.5.5//:openssl_src_readme",
    ],
    build_script_env = {
        "OPENSSL_SRC_PERL": "$(execpath :workspace_perl_tool)",
        "RULES_RUST_OPENSSL_SRC_DIR": "$(location @rust_crates__openssl-src-300.5.5-3.5.5//:openssl_src_readme)",
    },
    crate = "openssl-sys",
    repositories = ["rust_crates"],
)
crates.annotation(
    additive_build_file_content = """
filegroup(
    name = "openssl_src_runfiles",
    srcs = glob(
        allow_empty = True,
        include = ["**"],
        exclude = [
            "**/* *",
            ".tmp_git_root/**/*",
            "BUILD",
            "BUILD.bazel",
            "WORKSPACE",
            "WORKSPACE.bazel",
        ],
    ),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "openssl_src_readme",
    srcs = ["README.md"],
    visibility = ["//visibility:public"],
)
""",
    crate = "openssl-src",
    patch_args = ["-p1"],
    patches = ["//third_party/rust_patches:openssl_src_runfiles_patch"],
    repositories = ["rust_crates"],
)

# libzetta is an optional dependency for sysmon ZFS support
crates.spec(
    package = "libzetta",
    repositories = ["rust_crates"],
    version = "0.5.0",
)
crates.from_cargo(
    name = "rust_crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = ["//:Cargo.toml"],
)
use_repo(
    crates,
    "rust_crates",
    "rust_crates__rperf-0.1.25",
)

# --- Node.js toolchain -------------------------------------------------------
NODE_VERSION = "20.18.1"

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(
    node_repositories = {
        "20.18.1-darwin_arm64": (
            "node-v20.18.1-darwin-arm64.tar.gz",
            "node-v20.18.1-darwin-arm64",
            "9e92ce1032455a9cc419fe71e908b27ae477799371b45a0844eedb02279922a4",
        ),
        "20.18.1-darwin_amd64": (
            "node-v20.18.1-darwin-x64.tar.gz",
            "node-v20.18.1-darwin-x64",
            "c5497dd17c8875b53712edaf99052f961013cedc203964583fc0cfc0aaf93581",
        ),
        "20.18.1-linux_arm64": (
            "node-v20.18.1-linux-arm64.tar.xz",
            "node-v20.18.1-linux-arm64",
            "44d1ffc5905c005ace4515ca6f8c090c4c7cfce3a9a67df0dba35c727590b8f6",
        ),
        "20.18.1-linux_amd64": (
            "node-v20.18.1-linux-x64.tar.xz",
            "node-v20.18.1-linux-x64",
            "c6fa75c841cbffac851678a472f2a5bd612fff8308ef39236190e1f8dbb0e567",
        ),
        "20.18.1-windows_amd64": (
            "node-v20.18.1-win-x64.zip",
            "node-v20.18.1-win-x64",
            "56e5aacdeee7168871721b75819ccacf2367de8761b78eaceacdecd41e04ca03",
        ),
    },
    node_urls = [
        "https://nodejs.org/dist/v{version}/{filename}",
        "https://unofficial-builds.nodejs.org/download/release/v{version}/{filename}",
    ],
    node_version = NODE_VERSION,
)
use_repo(node, "nodejs_toolchains")

register_toolchains(
    "@nodejs_toolchains//:darwin_amd64_toolchain_target",
    "@nodejs_toolchains//:darwin_amd64_toolchain",
    "@nodejs_toolchains//:darwin_arm64_toolchain_target",
    "@nodejs_toolchains//:darwin_arm64_toolchain",
    "@nodejs_toolchains//:linux_amd64_toolchain_target",
    "@nodejs_toolchains//:linux_amd64_toolchain",
    "@nodejs_toolchains//:linux_arm64_toolchain_target",
    "@nodejs_toolchains//:linux_arm64_toolchain",
)

# --- npm dependency ingestion ------------------------------------------------

# TODO(bazel-migration): Re-enable npm translation once a Bazel-managed JS app
# (with a lockfile) is reintroduced.

# --- External binary artifacts ----------------------------------------------

http_file = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_file",
)

http_archive = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_archive",
)

http_file(
    name = "jq_linux_amd64",
    executable = True,
    sha256 = "5942c9b0934e510ee61eb3e30273f1b3fe2590df93933a93d7c58b81d19c8ff5",
    urls = [
        "https://github.com/jqlang/jq/releases/download/jq-1.7.1/jq-linux-amd64",
    ],
)

http_file(
    name = "jq_linux_arm64",
    executable = True,
    sha256 = "4dd2d8a0661df0b22f1bb9a1f9830f06b6f3b8f7d91211a1ef5d7c4f06a8b4a5",
    urls = [
        "https://github.com/jqlang/jq/releases/download/jq-1.7.1/jq-linux-arm64",
    ],
)

http_file(
    name = "curl_linux_amd64",
    executable = True,
    sha256 = "d18aa1f4e03b50b649491ca2c401cd8c5e89e72be91ff758952ad2ab5a83135d",
    urls = [
        "https://github.com/moparisthebest/static-curl/releases/download/v8.11.0/curl-amd64",
    ],
)

http_file(
    name = "curl_linux_arm64",
    executable = True,
    sha256 = "1b050abd1669f9a2ac29b34eb022cdeafb271dce5a4fb57d8ef8fadff6d7be1f",
    urls = [
        "https://github.com/moparisthebest/static-curl/releases/download/v8.11.0/curl-aarch64",
    ],
)

http_archive(
    name = "cmake_linux_amd64_prebuilt",
    build_file_content = """
package(default_visibility = ["//visibility:public"])
filegroup(
    name = "cmake_share",
    srcs = glob(["share/**"]),
)
filegroup(
    name = "cmake_bin",
    srcs = ["bin/cmake"],
)
""",
    sha256 = "c959e6d15714f798424960cd296632634f3ef57c2712559a7945170f0bcad205",
    strip_prefix = "cmake-3.30.4-linux-x86_64",
    urls = [
        "https://github.com/Kitware/CMake/releases/download/v3.30.4/cmake-3.30.4-linux-x86_64.tar.gz",
    ],
)

http_file(
    name = "postgresql_server_dev_16_deb",
    sha256 = "0599b3e7ef8ad4dc45b21afab84428d807730ed282679e974e19286f508ac8a9",
    urls = [
        "https://apt.postgresql.org/pub/repos/apt/pool/main/p/postgresql-16/postgresql-server-dev-16_16.12-1.pgdg+1_amd64.deb",
    ],
)

http_file(
    name = "debian_bison_amd64_deb",
    sha256 = "a414afd7519c53bfa33415ba5b951bc8b4906877004c49723ffda50a6033c3e8",
    urls = [
        "https://deb.debian.org/debian/pool/main/b/bison/bison_3.8.2+dfsg-1+b1_amd64.deb",
    ],
)

http_file(
    name = "debian_flex_amd64_deb",
    sha256 = "75f963765232c356d0a2fb70e780dfa9de2425aca036ec60eefb7fc98a2c905b",
    urls = [
        "https://deb.debian.org/debian/pool/main/f/flex/flex_2.6.4-8.2+b4_amd64.deb",
    ],
)

http_file(
    name = "debian_libpq_dev_amd64_deb",
    sha256 = "9d3009c8e8fa42f8dbfa4d2fb6a780f32a08c28586e2207a03b315568635a7db",
    urls = [
        "https://ftp.debian.org/debian/pool/main/p/postgresql-15/libpq-dev_15.15-0+deb12u1_amd64.deb",
    ],
)

http_file(
    name = "debian_gcc_15_base_amd64_deb",
    sha256 = "401f60c37644cfa4ba9a9c715b2e9475bfb31d3cdce5cb089e767e2fe2bf0f85",
    urls = [
        "https://deb.debian.org/debian/pool/main/g/gcc-15/gcc-15-base_15.2.0-12_amd64.deb",
    ],
)

http_file(
    name = "debian_libgcc_s1_amd64_deb",
    sha256 = "fccd4b6791f71a3b300fef3bfa8259dcbbd14221392d2b5d332d93bbfb00479f",
    urls = [
        "https://deb.debian.org/debian/pool/main/g/gcc-15/libgcc-s1_15.2.0-12_amd64.deb",
    ],
)

http_file(
    name = "debian_libc6_amd64_deb",
    sha256 = "6da26eef20b67e5a45ba21bfffa0178b93ac29951e03bd0ea42133d1aa1b4087",
    urls = [
        "https://deb.debian.org/debian/pool/main/g/glibc/libc6_2.42-11+b1_amd64.deb",
    ],
)

http_file(
    name = "postgresql_16_postgis_3_amd64_deb",
    sha256 = "fd00a20d05bc787428bcf7064aff7d0b6e8fef97231a9520b5d8ab9db7426c2f",
    urls = [
        "https://apt.postgresql.org/pub/repos/apt/pool/main/p/postgis/postgresql-16-postgis-3_3.6.2+dfsg-1.pgdg12+1_amd64.deb",
    ],
)

http_file(
    name = "postgresql_16_postgis_3_scripts_all_deb",
    sha256 = "c6327e424eb268739e9a9c41547aa7dd1e2c912c8f17ca695742d943c3f8eda5",
    urls = [
        "https://apt.postgresql.org/pub/repos/apt/pool/main/p/postgis/postgresql-16-postgis-3-scripts_3.6.2+dfsg-1.pgdg12+1_all.deb",
    ],
)

http_file(
    name = "postgresql_16_pgvector_amd64_deb",
    sha256 = "e7d4ce441c599c04d532e9596698cb97abb31ebc66825cda18c8847eb3b81d2f",
    urls = [
        "https://apt.postgresql.org/pub/repos/apt/pool/main/p/pgvector/postgresql-16-pgvector_0.8.1-2.pgdg12+1_amd64.deb",
    ],
)

http_file(
    name = "debian_libgeos_c1v5_amd64_deb",
    sha256 = "93651aef73ee0f154213010e48fad6a6fc5c3b4e1f916b748aa7ac0dd59b64ff",
    urls = [
        "https://deb.debian.org/debian/pool/main/g/geos/libgeos-c1v5_3.11.1-1_amd64.deb",
    ],
)

http_file(
    name = "debian_libgeos3_11_1_amd64_deb",
    sha256 = "c7d9b3ec22fe9a5d6f8fa3572bfbe504224c8b2a8a0fc3ebb000581114c47660",
    urls = [
        "https://deb.debian.org/debian/pool/main/g/geos/libgeos3.11.1_3.11.1-1_amd64.deb",
    ],
)

http_file(
    name = "debian_libproj25_amd64_deb",
    sha256 = "94ebf20612db95dd5994d83f15ced2469dd8ce4c7f54dba598248caf685fdc9c",
    urls = [
        "https://deb.debian.org/debian/pool/main/p/proj/libproj25_9.1.1-1+b1_amd64.deb",
    ],
)

http_file(
    name = "debian_proj_data_all_deb",
    sha256 = "efa6a74fba305e664ba27b81c2a5708aa59554ba41659af0e8c325e477f3d955",
    urls = [
        "https://deb.debian.org/debian/pool/main/p/proj/proj-data_9.1.1-1_all.deb",
    ],
)

http_file(
    name = "debian_libjson_c5_amd64_deb",
    sha256 = "d0e1ed8637d1c26b9720f6057d6355f18378bba5cc2553e459d1632783c00d70",
    urls = [
        "https://deb.debian.org/debian/pool/main/j/json-c/libjson-c5_0.16-2_amd64.deb",
    ],
)

http_file(
    name = "debian_libprotobuf_c1_amd64_deb",
    sha256 = "e99b3091938bfbd55b24e95587b868ba735e38e4adbcb9942c6993f2de3ba1bf",
    urls = [
        "https://deb.debian.org/debian/pool/main/p/protobuf-c/libprotobuf-c1_1.4.1-1+b1_amd64.deb",
    ],
)

http_file(
    name = "debian_libtiff6_amd64_deb",
    sha256 = "865574d933313e9900f67dd6db8410b491bb50e6bb66c32483388e219089d97a",
    urls = [
        "https://deb.debian.org/debian/pool/main/t/tiff/libtiff6_4.5.0-6+deb12u3_amd64.deb",
    ],
)

http_file(
    name = "debian_libcurl3_gnutls_amd64_deb",
    sha256 = "15431a9d3c3ea95df9f2f77ba300a992ada486e9584edf1e88ffa8be43c0fc17",
    urls = [
        "https://deb.debian.org/debian/pool/main/c/curl/libcurl3-gnutls_7.88.1-10+deb12u14_amd64.deb",
    ],
)

http_file(
    name = "debian_libwebp7_amd64_deb",
    sha256 = "7259b7ce46444694ce536360ad53acb68eb3b47a7ff81d7b1b8a3939b2ac9918",
    urls = [
        "https://deb.debian.org/debian/pool/main/libw/libwebp/libwebp7_1.2.4-0.2+deb12u1_amd64.deb",
    ],
)

http_file(
    name = "debian_liblerc4_amd64_deb",
    sha256 = "771f5c47ca69f24ca61e4be0c98c5912b182ce442f921697d17a472f3ded5c9c",
    urls = [
        "https://deb.debian.org/debian/pool/main/l/lerc/liblerc4_4.0.0+ds-2_amd64.deb",
    ],
)

http_file(
    name = "debian_libjbig0_amd64_deb",
    sha256 = "6b07c77b700a615642888a82ba92a7e7c429d04b9c8669c62b2263f15c4c4059",
    urls = [
        "https://deb.debian.org/debian/pool/main/j/jbigkit/libjbig0_2.1-6.1_amd64.deb",
    ],
)

http_file(
    name = "debian_libjpeg62_turbo_amd64_deb",
    sha256 = "95ec30140789a342add8f8371ed018924de51b539056522b66f207b25cba9cad",
    urls = [
        "https://deb.debian.org/debian/pool/main/libj/libjpeg-turbo/libjpeg62-turbo_2.1.5-2_amd64.deb",
    ],
)

http_file(
    name = "debian_libdeflate0_amd64_deb",
    sha256 = "3d4b39f94317b64a860db8a7a8b581b555124cd461fe07ec0d347edbdb9f6683",
    urls = [
        "https://deb.debian.org/debian/pool/main/libd/libdeflate/libdeflate0_1.14-1_amd64.deb",
    ],
)

http_file(
    name = "debian_libnghttp2_14_amd64_deb",
    sha256 = "dbe3eb8c831e654ac7d5cf045d605d53fd763e8ebc238607c25f301996103bb9",
    urls = [
        "https://deb.debian.org/debian/pool/main/n/nghttp2/libnghttp2-14_1.52.0-1+deb12u2_amd64.deb",
    ],
)

http_file(
    name = "debian_librtmp1_amd64_deb",
    sha256 = "e1f69020dc2c466e421ec6a58406b643be8b5c382abf0f8989011c1d3df91c87",
    urls = [
        "https://deb.debian.org/debian/pool/main/r/rtmpdump/librtmp1_2.4+20151223.gitfa8646d.1-2+b2_amd64.deb",
    ],
)

http_file(
    name = "debian_libssh2_1_amd64_deb",
    sha256 = "d20a3ee34fa84ad8bd381e8be6e9c2c2ea32347cff5e1169c10e978d43f54f24",
    urls = [
        "https://deb.debian.org/debian/pool/main/libs/libssh2/libssh2-1_1.10.0-3+b1_amd64.deb",
    ],
)

http_file(
    name = "debian_libpsl5_amd64_deb",
    sha256 = "4f0d35610204e4e754b057748719744114621f2f6f4202d846c314860a981afb",
    urls = [
        "https://deb.debian.org/debian/pool/main/libp/libpsl/libpsl5_0.21.2-1_amd64.deb",
    ],
)

http_file(
    name = "debian_libbrotli1_amd64_deb",
    sha256 = "563b4caec1aa5e876bd3355b36e7a38e1484baf5a293b48d1e8bd22db786e4d7",
    urls = [
        "https://deb.debian.org/debian/pool/main/b/brotli/libbrotli1_1.0.9-2+b6_amd64.deb",
    ],
)

http_file(
    name = "debian_openssl_amd64_deb",
    sha256 = "405385cc86a4dc3ad084fe7f9ec38f0583a4ae75695e7719d244e675687fe728",
    urls = [
        "https://deb.debian.org/debian/pool/main/o/openssl/openssl_3.0.18-1~deb12u1_amd64.deb",
    ],
)

http_file(
    name = "debian_libssl3_amd64_deb",
    sha256 = "4eaee9db5a113b991a72eefe41965400a1efc97a560678edb5ddd978ccc8b083",
    urls = [
        "https://deb.debian.org/debian/pool/main/o/openssl/libssl3_3.0.18-1~deb12u1_amd64.deb",
    ],
)

http_archive(
    name = "crane_linux_amd64",
    build_file_content = """
exports_files(["crane"])
""",
    integrity = "sha256-zfTUJtll2ai6YT1+vzrd+TEBqi6FOj8I+/2u0oI5GPM=",
    urls = [
        "https://github.com/google/go-containerregistry/releases/download/v0.18.0/go-containerregistry_Linux_x86_64.tar.gz",
    ],
)

http_file(
    name = "alpine_iputils_ping_apk",
    sha256 = "a31f461f77b81b1c2291b38f0e4a887f83b39de5eaba2f88946d33c249e09082",
    urls = [
        "https://dl-cdn.alpinelinux.org/alpine/v3.20/main/x86_64/iputils-ping-20240117-r0.apk",
    ],
)

http_file(
    name = "alpine_nmap_apk",
    sha256 = "4259d97c8f0d59c74e090950d1b33d303da3d1122ea3a636308786292996d131",
    urls = [
        "https://dl-cdn.alpinelinux.org/alpine/v3.20/main/x86_64/nmap-7.95-r0.apk",
    ],
)

http_file(
    name = "alpine_netcat_openbsd_apk",
    sha256 = "a1d83ec145cf1e2c56e6a032066770575d0fee477e443dc25dc23a1bdff920ce",
    urls = [
        "https://dl-cdn.alpinelinux.org/alpine/v3.20/main/x86_64/netcat-openbsd-1.226-r0.apk",
    ],
)

http_file(
    name = "alpine_inetutils_telnet_apk",
    sha256 = "75e4ddbbd4f2f59558ca2603f38ef22cc48bb8f0b20f2f232a7e8ed1a40e07f6",
    urls = [
        "https://dl-cdn.alpinelinux.org/alpine/v3.20/community/x86_64/inetutils-telnet-2.5-r0.apk",
    ],
)

http_file(
    name = "alpine_libcap2_apk",
    sha256 = "38e69c9b966e0db15915c107a01c46cb6f0758fe0ef92001d40fc3987e06b74d",
    urls = [
        "https://dl-cdn.alpinelinux.org/alpine/v3.20/main/x86_64/libcap2-2.70-r0.apk",
    ],
)

http_file(
    name = "alpine_libbsd_apk",
    sha256 = "8936afde94982d1152fab86d45e8ced56004ef9c21c78719b86c056a8b25769d",
    urls = [
        "https://dl-cdn.alpinelinux.org/alpine/v3.20/main/x86_64/libbsd-0.12.2-r0.apk",
    ],
)

http_file(
    name = "alpine_libmd_apk",
    sha256 = "831be0b851d8dbf0cb9e9412cba2e799d24cebea966660bb863426c6d18e88eb",
    urls = [
        "https://dl-cdn.alpinelinux.org/alpine/v3.20/main/x86_64/libmd-1.1.0-r0.apk",
    ],
)

http_file(
    name = "alpine_bash_apk",
    sha256 = "132bb6f77fcad208b44b54d1fd73cb5e02cfea18f884b399f8de0e38b5134a93",
    urls = [
        "https://dl-cdn.alpinelinux.org/alpine/v3.20/main/x86_64/bash-5.2.26-r0.apk",
    ],
)

http_file(
    name = "alpine_glibc_apk",
    sha256 = "276f43ce9b2d5878422bca94ca94e882a7eb263abe171d233ac037201ffcaf06",
    urls = [
        "https://github.com/sgerrand/alpine-pkg-glibc/releases/download/2.35-r1/glibc-2.35-r1.apk",
    ],
)

http_file(
    name = "alpine_libncursesw_apk",
    sha256 = "db40dff96b7bb668257e45a5d14cab346bdfc7992598d5c51ee64dfc4ad014d5",
    urls = [
        "https://dl-cdn.alpinelinux.org/alpine/v3.20/main/x86_64/libncursesw-6.4_p20240420-r2.apk",
    ],
)

http_file(
    name = "alpine_ncurses_terminfo_base_apk",
    sha256 = "555948e6b67d4bddc213673843a63bbd3d30548133bdff8aff9e66988285ae7e",
    urls = [
        "https://dl-cdn.alpinelinux.org/alpine/v3.20/main/x86_64/ncurses-terminfo-base-6.4_p20240420-r2.apk",
    ],
)

http_file(
    name = "alpine_readline_apk",
    sha256 = "177b9c76718d0a12cd1c27f2a3e422341ad93259ad56d77f55da712563049aed",
    urls = [
        "https://dl-cdn.alpinelinux.org/alpine/v3.20/main/x86_64/readline-8.2.10-r0.apk",
    ],
)

http_file(
    name = "alpine_postgresql16_client_apk",
    sha256 = "2bca5cb3e737f67e2049ff8cdc6a27ee8af4ec2c901486a1f6529f374d9f8ac9",
    urls = [
        "https://dl-cdn.alpinelinux.org/alpine/v3.20/main/x86_64/postgresql16-client-16.12-r0.apk",
    ],
)

http_file(
    name = "alpine_libpq16_apk",
    sha256 = "375287992600a04a598a0789a7ae066a8b0ea5601aa6424bb59b58f665254c3e",
    urls = [
        "https://dl-cdn.alpinelinux.org/alpine/v3.20/main/x86_64/libpq-16.12-r0.apk",
    ],
)

http_archive(
    name = "grpcurl_linux_amd64",
    build_file_content = """
exports_files(["grpcurl"])
""",
    sha256 = "a422d1e8ad854a305c0dd53f2f2053da242211d3d1810e7addb40a041e309516",
    strip_prefix = "",
    urls = [
        "https://github.com/fullstorydev/grpcurl/releases/download/v1.8.9/grpcurl_1.8.9_linux_x86_64.tar.gz",
    ],
)

http_archive(
    name = "natscli_linux_amd64",
    build_file_content = """
exports_files(["nats"])
""",
    sha256 = "965a1a68a67a20cf9513f6e3fec612bbef81d25d519177c460afddbcf72e1d4b",
    strip_prefix = "nats-0.3.0-linux-amd64",
    urls = [
        "https://github.com/nats-io/natscli/releases/download/v0.3.0/nats-0.3.0-linux-amd64.zip",
    ],
)

http_file(
    name = "kubectl_linux_amd64",
    downloaded_file_path = "kubectl",
    executable = True,
    sha256 = "aaa7e6ff3bd28c262f2d95c8c967597e097b092e9b79bcb37de699e7488e3e7b",
    urls = [
        "https://dl.k8s.io/release/v1.32.5/bin/linux/amd64/kubectl",
    ],
)

http_archive(
    name = "perl_src",
    build_file_content = """
filegroup(
    name = "all_sources",
    srcs = glob(["**"], exclude = ["BUILD", "BUILD.bazel"]),
    visibility = ["//visibility:public"],
)
""",
    patch_args = ["-p1"],
    patches = ["//third_party/perl:add_configure_wrapper.patch"],
    sha256 = "d5325300ad267624cb0b7d512cfdfcd74fa7fe00c455c5b51a6bd53e5e199ef9",
    strip_prefix = "perl-5.40.0",
    urls = [
        "https://www.cpan.org/src/5.0/perl-5.40.0.tar.xz",
    ],
)

http_archive(
    name = "remote_coverage_tools",
    sha256 = "aab349130118497d86bc79e3f735f026d3c36e7d38529063e91da1c29cc2ea47",
    urls = [
        "https://mirror.bazel.build/bazel_coverage_output_generator/releases/coverage_output_generator-v2.9.zip",
    ],
)

http_archive(
    name = "nats_server_linux_amd64",
    build_file_content = """
filegroup(
    name = "nats_server",
    srcs = ["nats-server"],
    visibility = ["//visibility:public"],
)
""",
    sha256 = "db587fd8b36ac732a8434e748b026ef77ed9cb714a4e57bd010b1de93c2f3801",
    strip_prefix = "nats-server-v2.12.2-linux-amd64",
    urls = [
        "https://github.com/nats-io/nats-server/releases/download/v2.12.2/nats-server-v2.12.2-linux-amd64.tar.gz",
    ],
)

# --- CNPG extension sources ----------------------------------

http_archive(
    name = "timescaledb_src",
    build_file_content = """
filegroup(
    name = "all_srcs",
    srcs = glob(["**"], exclude = ["BUILD", "BUILD.bazel"]),
    visibility = ["//visibility:public"],
)
""",
    sha256 = "06a5d38c52bebb364104541002ccfb9ea739f93183c339895f0d1ed90b005e17",
    strip_prefix = "timescaledb-2.24.0",
    urls = [
        "https://github.com/timescale/timescaledb/archive/refs/tags/2.24.0.tar.gz",
    ],
)

http_archive(
    name = "age_src",
    build_file_content = """
filegroup(
    name = "all_srcs",
    srcs = glob(["**"], exclude = ["BUILD", "BUILD.bazel"]),
    visibility = ["//visibility:public"],
)
""",
    sha256 = "57c7187a37942f1b6208e1f68caafcb7374f8bedaabad162c8760adb44ae9ffe",
    strip_prefix = "apache-age-1.6.0",
    urls = [
        "https://downloads.apache.org/age/PG17/1.6.0/apache-age-1.6.0-src.tar.gz",
    ],
)

# Bun runtime for Phoenix React Server SSR
# Used by web-ng for client-side React components (GoRules JDM editor)
http_archive(
    name = "bun_linux_amd64",
    build_file_content = """
package(default_visibility = ["//visibility:public"])
exports_files(["bun"])
""",
    sha256 = "9ba98d2134550d6690875b23a4f5c48e74b7cb267e8cc1b8f52605921c6c11ef",
    strip_prefix = "bun-linux-x64",
    urls = [
        "https://github.com/oven-sh/bun/releases/download/bun-v1.3.6/bun-linux-x64.zip",
    ],
)

# Additional module extensions will be layered in as language owners migrate to
# Bazel (e.g., http_file for binary deps).
